--- a/web/Bootstrap/css/bootstrap.css
+++ b/web/Bootstrap/css/bootstrap.css
@@ -62,6 +62,7 @@ dfn {
 h1 {
   margin: .67em 0;
   font-size: 2em;
+  margin-left: 30px;
 }
 mark {
   color: #000;
@@ -97,6 +98,17 @@ hr {
   -webkit-box-sizing: content-box;
      -moz-box-sizing: content-box;
           box-sizing: content-box;
+  width: 95%;
+
+  
+}
+
+.line{
+     height: 0;
+     margin: -1.2ex 0;
+     padding: 0;
+     border: 0;
+     clear: both;
 }
 pre {
   overflow: auto;
@@ -116,6 +128,8 @@ textarea {
   margin: 0;
   font: inherit;
   color: inherit;
+  background: #d9edf7;
+  border: transparent;
 }
 button {
   overflow: visible;
@@ -1148,7 +1162,7 @@ hr {
   margin-top: 20px;
   margin-bottom: 20px;
   border: 0;
-  border-top: 1px solid #eee;
+  border-top: 2px solid silver;
 }
 .sr-only {
   position: absolute;
@@ -1270,6 +1284,7 @@ h1,
 h2,
 .h2 {
   font-size: 30px;
+  text-align: center;
 }
 h3,
 .h3 {
@@ -3120,6 +3135,7 @@ fieldset[disabled] .btn-default.focus {
   color: #fff;
   background-color: #337ab7;
   border-color: #2e6da4;
+  margin-left: 15px;
 }
 .btn-primary:focus,
 .btn-primary.focus {
@@ -3516,6 +3532,7 @@ tbody.collapse.in {
 .dropup,
 .dropdown {
   position: relative;
+  float: left;
 }
 .dropdown-toggle:focus {
   outline: 0;
@@ -5030,8 +5047,7 @@ a.thumbnail.active {
 .alert {
   padding: 15px;
   margin-bottom: 20px;
-  border: 1px solid transparent;
-  border-radius: 4px;
+  border-left: 5px solid transparent;
 }
 .alert h4 {
   margin-top: 0;
@@ -5092,9 +5108,9 @@ a.thumbnail.active {
   color: #66512c;
 }
 .alert-danger {
-  color: #a94442;
-  background-color: #f2dede;
-  border-color: #ebccd1;
+  color: #31708f;
+  background-color: #d9edf7;
+  border-color: #3dbdd6;
 }
 .alert-danger hr {
   border-top-color: #e4b9c0;
@@ -5460,6 +5476,7 @@ button.list-group-item-danger.active:focus {
 }
 .panel-body {
   padding: 15px;
+  height: 52%;
 }
 .panel-heading {
   padding: 10px 15px;
@@ -5741,6 +5758,10 @@ button.list-group-item-danger.active:focus {
 }
 .panel-info {
   border-color: #bce8f1;
+  width: 22%;
+  float: left;
+  margin-left: 30px;
+  height: 175px;
 }
 .panel-info > .panel-heading {
   color: #31708f;
