--- a/web/style.css
+++ b/web/style.css
@@ -15,7 +15,7 @@ fieldset{
 .logo{
     width:17%;
     float: left;
-    margin-right:63%;
+    margin-right:58%;
     margin-top:2%;
 }
 
@@ -35,3 +35,21 @@ header{
     height: 180px;
     background-color: #c4e3f3;
 }
+header img{
+    margin-left: 30px;
+}
+
+.searchButton{
+    float: left;
+}
+.tableau{
+    background-color: white;
+    border: 1px solid black;
+}
+.tableButton{
+    background-color:white;
+    border:4px solid white;
+    width: 25px;
+}
+
+
