--- a/web/Bootstrap/css/bootstrap.css
+++ b/web/Bootstrap/css/bootstrap.css
@@ -2335,6 +2335,7 @@ th {
 }
 .table-striped > tbody > tr:nth-of-type(odd) {
   background-color: #f9f9f9;
+  
 }
 .table-hover > tbody > tr:hover {
   background-color: #f5f5f5;
@@ -3193,6 +3194,7 @@ fieldset[disabled] .btn-primary.focus {
   color: #fff;
   background-color: #5cb85c;
   border-color: #4cae4c;
+  margin-left: 15px;
 }
 .btn-success:focus,
 .btn-success.focus {
@@ -3364,6 +3366,7 @@ fieldset[disabled] .btn-warning.focus {
   color: #fff;
   background-color: #d9534f;
   border-color: #d43f3a;
+  margin-left: 15px;
 }
 .btn-danger:focus,
 .btn-danger.focus {
