--- a/web/style.css
+++ b/web/style.css
@@ -51,5 +51,11 @@ header img{
     border:4px solid white;
     width: 25px;
 }
+.firstColumn{
+    width: 17%;
+}
 
-
+table textarea{
+    overflow-y: scroll;
+    height: 100px;
+}
