Header responsive + css studentTeamCreation

--- a/web/style.css
+++ b/web/style.css
@@ -12,32 +12,25 @@ fieldset{
     width:23%;
 }
 
-.logo{
-    width:17%;
-    float: left;
-    margin-right:58%;
-    margin-top:2%;
+.logo2 {
+    width: 70%;
+    margin-top: 10%;
+    margin-left: 12%;
+    margin-bottom: 10%;
 }
 
-.photo{
-    width:7%;
-    float: left;
-    margin-right:1%;
-    margin-top:3%;
-    
+.photo2{
+    width:10%;
+    margin-left:70%;
+    margin-top:4%;
+    float:left;
 }
 
 .user{
     margin-top:3%;
+    margin-right: 5%;
 }
 
-header{
-    height: 180px;
-    background-color: #c4e3f3;
-}
-header img{
-    margin-left: 30px;
-}
 
 .searchButton{
     float: left;
@@ -99,3 +92,51 @@ td {
     width: 130px;
 }
 
+.doctable{
+    width: 70%;
+    vertical-align: middle;
+}
+
+.tdc1{
+    width: 33%;
+}
+
+.tdc2{
+    width: 20%;
+}
+
+.tdc3{
+    width: 47%;
+}
+
+#whiteblack{
+    background-color: white;
+    border: 1px solid black;
+}
+
+#white{
+    background-color: white;
+}
+
+
+#td1{
+    height: 40px;
+    width: 130px;
+}
+
+#td3{
+    text-align: right;
+}
+
+.doc{
+    margin: 30px;
+    color: black;
+}
+
+.docs{
+    margin-left: 30px;
+}
+
+#head{
+    background-color: #c4e3f3;
+}
