Fin CSS + Footer

--- a/web/Bootstrap/css/bootstrap.css
+++ b/web/Bootstrap/css/bootstrap.css
@@ -2144,7 +2144,7 @@ pre code {
     width: 16.66666667%;
   }
   .col-lg-1 {
-    width: 8.33333333%;
+    width: 14.21%;
   }
   .col-lg-pull-12 {
     right: 100%;
